--- a/src/main/resources/web/style.css
+++ b/src/main/resources/web/style.css
@@ -2,6 +2,6 @@ body {
     background-color: #333333;
     color: #ffffff;
     font-family: arial, sans-serif;
-    margin: 10;
-    padding: 10;
+    margin: 10px;
+    padding: 10px;
 }
